# pinn_repo

./: .gitignore  CITATION.cff  README.md  main.py  pyproject.toml  requirements.txt  train.py
Notebook/: final-dynamic-pinn.ipynb
model/: universal_pinn_weights.weights.h5
simulation/Test_A/: README.md  panel_shape_validation.py
simulation/Test_B/: README.md  panel_accuracy_validation.py
simulation/Test_C/: README.md  panel_simulation.py
src/: bayesian_optimization_and_training.py  data_loader.py  eda_cell_count.py  eda_panel_materials.py  network.py  network_and_train_step.py
