[project]
name = "pinn-repo"
version = "0.1.0"
description = "PINN-MPPT for solar panels"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tensorflow>=2.15",
    "pvlib>=0.10",
    "optuna>=3.5",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]